--- a/src/components/statistics/statisticItem/styles.module.css
+++ b/src/components/statistics/statisticItem/styles.module.css
@@ -1,12 +1,10 @@
-.friendList{
-  width: 100%;
+.item{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 20px;
-
-  margin: 0;
-  padding: 0;
-  list-style: none;
+  
+  padding: 10px;
+  min-width: 100px;
+  max-width: 100px;
 }
